# LED-Video-Wall

./: .gitignore  .ignore  README.md  deploy.sh  flake.nix
canvas/: canvas.cpp  controller_region.h
check-in/: Dockerfile  README.md  check_in_server.py  docker-compose.yml  hosts.csv.example  requirements.txt
client/: .gitignore  CMakeLists.txt  README.md  client.ino  partitions.csv  sdkconfig
client/src/: CMakeLists.txt  get_status.cpp  log.cpp  log.hpp  main.cpp  network.cpp  network.hpp  ota.cpp  ota.hpp  redraw.cpp  set_config.cpp  set_leds.cpp  wifi.cpp  wifi.cpp.save  wifi.hpp
client/src/commands/: get_logs.cpp  get_logs.hpp  get_status.cpp  get_status.hpp  redraw.cpp  redraw.hpp  set_config.cpp  set_config.hpp  set_leds.cpp  set_leds.hpp
config/: matrix.yaml
nix/: apps.nix  overlays.nix  packages.nix  shells.nix
protocol/src/: protocol.cpp  protocol.hpp
python-scripts/: added-images.py  move-square.py
server/: CMakeLists.txt  Makefile  README.md  canvas.cpp  canvas.h  config-connor.yaml  config-peter.yaml  config.yaml  controller_region.h  input-alan-face.yaml  input-cat.yaml  input-connor.yaml  input-conway.yaml  input-creeper.yaml  input-hello-rainbow.yaml  input-image-test.yaml  input-image.yaml  input-img5.yaml  input-peter.yaml  input-rainbow.yaml  input-text.yaml  input-webcam.yaml  input.yaml  led-wall-server.80s-95595,Kiko.btr  main.cpp  makefile  matrix_config.h  matrix_config.yaml  test-config-1.yaml  test-config-2.yaml  test-config-3.yaml  test-config-4.yaml  web_viewer.h
server/database/: .gitignore  docker-compose.yml  schema.py
server/inc/: canvas.h  canvas.hpp  client.hpp  command.hpp  config-parser.hpp  controller.hpp  input-parser.hpp  rtmp.hpp  tcp.hpp  text-render.hpp
server/plugins/font/: textelement.cpp  textelement.hpp
server/src/: canvas.cpp  client.cpp  command.cpp  config-parser.cpp  controller.cpp  input-parser.cpp  main.cpp  rtmp.cpp  tcp.cpp  text-render.cpp
web/LED-Wall-Website/: README.md  package-lock.json  package.json  vite.config.ts
web/LED-Wall-Website/src/: App.css  App.tsx  Styles.module.css  button-controls.tsx  button_controls.tsx  (+1 more)
web/web-server/: README.md  led_video_wall.py  main.py  requirements.txt
website/LED-Wall-Website/: package-lock.json
wed-server/: main.py
(+17 files in other folders)
